Fix spacing and size

--- a/src/components/ReviewGrid/ReviewGrid.module.css
+++ b/src/components/ReviewGrid/ReviewGrid.module.css
@@ -2,14 +2,10 @@ ul {
   padding: 0;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-row-gap: 2rem;
+  grid-row-gap: 0.75rem;
   grid-column-gap: 0.5rem;
-  padding: 1rem 3rem;
+  max-width: 1000px;
+  margin: 0 auto;
   justify-items: center;
-}
-
-@media screen and (max-width: 480px) {
-  ul {
-    padding: 1rem 0;
-  }
+  list-style: none;
 }
